--- a/Javascript4/style.css
+++ b/Javascript4/style.css
@@ -6,7 +6,7 @@
 
    html {
   font-family: sans-serif;
-  background: #red;
+  background: #ffa600;
 }
 
 .controls {
@@ -56,7 +56,7 @@
 }
 
 input:checked + p {
-  background: #F9F9C0;
+  background: #F9C9C0;
   text-decoration: line-through;
 }
 
