--- a/Javascript5/style.css
+++ b/Javascript5/style.css
@@ -1,3 +1,11 @@
+/*
+<!--
+  Emre Jenedi
+  Date: 10/22/2025
+-->!
+*/
+
+
 html {
   box-sizing: border-box;
 }
@@ -8,7 +16,7 @@ html {
 
 body {
   min-height: 100vh;
-  margin: 0; /* Important! */
+  margin: 0; 
   font-family: sans-serif;
   background:
     linear-gradient(45deg, hsla(340, 100%, 55%, 1) 0%, hsla(340, 100%, 55%, 0) 70%),
